src/main/resources/nextcloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-deployment
spec:
  selector:
    matchLabels:
      app: cloud-app
      app.kubernetes.io/name: cloud-pod
      app.kubernetes.io/application: cloud
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloud-pod
        app.kubernetes.io/application: cloud
        redeploy: v3
    spec:
      containers:
        - image: domaindrivenarchitecture/c4k-cloud
          name: cloud-app
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 80
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - PGPASSWORD=$POSTGRES_PASSWORD psql -h postgresql-service -U $POSTGRES_USER $POSTGRES_DB
            initialDelaySeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: cloud-data-volume
              mountPath: /var/www/html
      volumes:
      - name: cloud-data-volume
        persistentVolumeClaim:
          claimName: cloud-pvc
