src/main/resources/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cloud
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-issuer
    ingress.kubernetes.io/proxy-body-size: "256m"
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-connect-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
    ingress.kubernetes.io/proxy-read-timeout: "300"
  namespace: default
spec:
  tls:
  - hosts:
    - fqdn
    secretName: cloud-cert
  rules:
    - host: fqdn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloud-service
                port:
                  number: 80
